--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,55 @@
-.page {
-    padding: 40px 20px;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+@import "./_partials/variables";
+@import "./_partials/mixins";
+@import "./_partials/base";
+@import "./_partials/layout";
+@import "./_partials/components";
+@import "./_partials/utilities";
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;700&display=swap');
+
+
+// .portfolio-cards {
+//     display: flex;
+//     justify-content: center;
+//     margin: 20px 0;
+// }
+
+// .portfolio-cards__card {
+//     background-color: #fff;
+//     border-radius: 10px;
+//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//     margin: 20px;
+//     overflow: hidden;
+//     width: 300px;
+// }
+
+// .portfolio-cards__card a {
+//     color: inherit;
+//     text-decoration: none;
+// }
+
+// .portfolio-cards__card img {
+//     width: 100%;
+//     height: auto;
+// }
+
+// .portfolio-cards__card-content {
+//     padding: 20px;
+// }
+
+// .portfolio-cards__card-content h3 {
+//     margin-bottom: 10px;
+// }
+
+// .portfolio-cards__card-content p {
+//     color: #666;
+// }
+
+// .portfolio-cards__card--web-development {
+//     background-color: #f5f5f5;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     height: 100%;
+// }
