--- a/css/_partials/_base.scss
+++ b/css/_partials/_base.scss
@@ -8,7 +8,8 @@ body, html {
 
 p {
     margin: 1rem;
-    font-weight: 100;
+    font-size: 1rem;
+    font-weight: lighter;
     font-family: $font-stack;
 }
 
@@ -21,7 +22,7 @@ h1 {
 h2 {
   font-family: $header-font;
   font-weight: lighter;
-  font-size: larger;
+  font-size: 600;
   text-align: center;
 }
 
@@ -32,16 +33,6 @@ h3 {
     text-align: center;
 }
 
-footer {
-    color: $secondary-color;
-    background-color: rgba(0, 0, 0, 0.9);
-    font-family: $font-stack;
-    font-size: small;
-    font-weight:lighter;
-    text-align: center;
-    position: fixed;
-    padding-bottom: 0.5rem;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
+a {
+    text-decoration: none;
 }
