--- a/css/_partials/_variables.scss
+++ b/css/_partials/_variables.scss
@@ -1,8 +1,9 @@
 $primary-color: #000000;
 $secondary-color: #f4f4f4;
 $text-color: #333;
-$font-stack: 'Oswald', sans-serif;
-$header-font: 'Bebas Neue', sans-serif;
+$hyperlinks-color: #024d9c;
+$font-stack: "Oswald", sans-serif;
+$header-font: "Bebas Neue", sans-serif;
 $background-color: rgba(255, 255, 255, 0.8);
 $border-radius: 15px;
 $box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
