--- a/css/_partials/_components.scss
+++ b/css/_partials/_components.scss
@@ -128,7 +128,7 @@
       background-color: rgba(0, 0, 0, 0.5);
       color: $secondary-color;
       text-align: center;
-      margin: 0; // Removes default margin
+      margin: 0;
     }
   }
 }
@@ -157,4 +157,3 @@ footer {
     font-weight: lighter;
   }
 }
-
