--- a/css/_partials/_layout.scss
+++ b/css/_partials/_layout.scss
@@ -18,7 +18,6 @@ header {
   nav {
     @include flex-text;
     padding: 0.25rem 1rem;
-
   }
 
   ul {
@@ -75,8 +74,8 @@ header {
       font-family: $font-stack;
       max-width: 70%;
 
-      @media screen and (max-width: 450px){
-        font-size:smaller;
+      @media screen and (max-width: 450px) {
+        font-size: smaller;
         max-width: 100%;
       }
     }
@@ -99,7 +98,7 @@ header {
     .projects-grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 0; // Zero gap between grid items
+      gap: 0;
 
       @media screen and (max-width: 820px) {
         grid-template-columns: repeat(2, 1fr);
@@ -111,23 +110,22 @@ header {
       }
 
       .project-item {
-
         overflow: hidden;
         img {
+          width: 100%;
+          height: auto; // maintain aspect ratio
+          object-fit: cover;
 
-            width: 100%;
-            height: auto; // maintain aspect ratio
-            object-fit: cover;
-  
-            // enlarge the image if the screen gets smaller than 350px
-            @media screen and (max-width: 350px) {
-              width: 50%;
-              height: auto;
-            }
+          // enlarge the image if the screen gets smaller than 350px
+          @media screen and (max-width: 350px) {
+            width: 50%;
+            height: auto;
           }
+        }
 
         .project-info {
           padding: 0.75rem;
+          margin-bottom: 1.5rem;
 
           h2 {
             color: $primary-color;
@@ -136,7 +134,6 @@ header {
           }
         }
 
-        // Hover effect to indicate interactivity
         &:hover {
           background: darken($secondary-color, 25%);
           cursor: pointer;
@@ -152,7 +149,13 @@ header {
       margin-bottom: 3rem;
       // Display 4 columns by default
       grid-template-columns: repeat(4, 1fr);
-      gap: 0; // Zero gap between grid items
+      gap: 0;
+
+      img {
+        max-height: 500px;
+        max-width: 350px;
+        object-fit: cover;
+      }
 
       // On iPad screens (max-width: 768px), display 2 columns
       @media screen and (max-width: 820px) {
@@ -168,32 +171,53 @@ header {
 }
 
 // for project details page created in projectDetails.js
-
 .project-details-grid {
-    display: grid;
-    gap: 1rem; // No gap between items?
-    justify-content: center;
-    
-    
-    @media screen and (min-width: 768px) {
-      // For tablets and upwards, adjust if necessary
-      grid-template-columns: repeat(1, 1fr); // single column layout
-    }
-  
-    @media screen and (min-width: 1024px) {
-      // For laptops and larger screens
-      grid-template-columns: repeat(1, 1fr);
-    }
-  
-    img {
-      width: 100%; // Full width on mobile and tablets
-      height: auto; // Maintain aspect ratio
-      object-fit: cover;
-  
-      @media screen and (min-width: 1024px) {
-        width: 60%;     // Image width is 60% of the container's width on larger screens
-        margin: 0 auto;
-      }
-    }
+  display: grid;
+  gap: 1rem;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
   }
 
+  @media screen and (min-width: 1024px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+
+    @media screen and (min-width: 1024px) {
+      width: 60%;
+      margin: 0 auto;
+    }
+  }
+}
+
+.hyperlinks-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  justify-content: center;
+
+  img {
+    width: 30px;
+    height: auto;
+    object-fit: cover;
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
+  a:active {
+    color: $primary-color;
+  }
+  a:visited {
+    color: $hyperlinks-color;
+  }
+}
