--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ header ul li a:hover {
 }
 .section--projects .projects-grid .project-item .project-info {
   padding: 0.75rem;
+  margin-bottom: 1.5rem;
 }
 .section--projects .projects-grid .project-item .project-info h2 {
   color: #000000;
@@ -180,6 +181,11 @@ header ul li a:hover {
   margin-bottom: 3rem;
   grid-template-columns: repeat(4, 1fr);
   gap: 0;
+}
+.section--projects .projects-grid img {
+  max-height: 500px;
+  max-width: 350px;
+  object-fit: cover;
 }
 @media screen and (max-width: 820px) {
   .section--projects .projects-grid {
@@ -217,6 +223,30 @@ header ul li a:hover {
     width: 60%;
     margin: 0 auto;
   }
+}
+
+.hyperlinks-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  justify-content: center;
+}
+.hyperlinks-grid img {
+  width: 30px;
+  height: auto;
+  object-fit: cover;
+}
+.hyperlinks-grid a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row-reverse;
+}
+.hyperlinks-grid a:active {
+  color: #000000;
+}
+.hyperlinks-grid a:visited {
+  color: #024d9c;
 }
 
 .social-media-icons {
